assets/scripts/segments/SegmentLabelContainer.scss
@import "../../styles/variables.scss";

.segment-label-container {
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  right: -1px;
  border-left: 1px solid $segment-width-rule;
  border-right: 1px solid $segment-width-rule;
  top: $canvas-baseline;
  height: 90px;
  font-size: 13px;
}

.segment-label {
  position: absolute;
  left: 4px;
  right: 4px;
  top: 48px;
  color: $segment-text;
  font-weight: 300;
  text-rendering: optimizeLegibility;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  pointer-events: none;
}

.segment.hover .segment-label,
.segment.hover .segment-capacity {
  font-weight: 700;

  // Show full label when hovering over segment with
  // a truncated label
  left: auto;
  right: auto;
  overflow: visible;
  z-index: 1;
  background-color: $bottom-background;
  padding: 4px;
  margin-top: -4px;
}

.segment.warning .segment-label,
.segment.warning .segment-capacity {
  color: $segment-warning-text;
}

.segment-width,
.segment-capacity {
  position: absolute;
  left: 0;
  right: 0;
  height: 24px;
  line-height: 20px;
  color: $segment-text;
  font-weight: 300;
  text-rendering: optimizeLegibility;
  overflow: hidden;
  pointer-events: none;
}

.segment-width {
  top: 22px;
}

.segment-capacity {
  top: 65px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* Force `rtl` direction when it's applied to the body, since
the width element is inside the street layout which is forced `ltr` */
body[dir="rtl"] .segment-width {
  direction: rtl !important;
}

.segment-grid {
  position: absolute;
  left: -1px;
  right: -1px;
  top: 0;
  height: $segment-grid-height;
  pointer-events: none;

  // Creates grid lines
  // The last value is required for IE11
  background-image: linear-gradient(
    90deg,
    $segment-width-rule 1px,
    transparent 1px,
    transparent
  );
  background-repeat: repeat-x;

  // Change background-size width to adjust spacing of grid lines
  &.units-imperial {
    background-size: $tile-size 100%;
  }

  &.units-metric {
    background-size: ($tile-size * 100 / 30 / 2) 100%;
  }
}

